Archive2/f3/8745fb942abc77/output
main.cpp:9:5: error: must use 'struct' tag to refer to type 'stat' in this scope
    stat s1 ;
    ^
    struct 
main.cpp:5:6: note: struct 'stat' is hidden by a non-type declaration of 'stat' here
void stat() {} 
     ^
1 error generated.
